@@ -56,14 +56,16 @@ public class ScheduledExecutorServiceTest extends AbstractInstrumentationTest {
 
     @AfterEach
     void tearDown() {
-        assertThat(tracer.getActive()).isEqualTo(transaction);
-        transaction.deactivate().end();
+        if (tracer.getActive() != null) {
+            transaction.deactivate().end();
+        }
     }
 
     @Test
     void testScheduleCallable() throws Exception {
         final ScheduledFuture<? extends AbstractSpan<?>> future = scheduler.schedule(() -> tracer.getActive(), 0, TimeUnit.SECONDS);
         assertThat(future.get()).isEqualTo(transaction);
+        assertThat(tracer.getActive()).isEqualTo(transaction);
     }
 
     @Test
@@ -71,5 +73,36 @@ public class ScheduledExecutorServiceTest extends AbstractInstrumentationTest {
         AtomicReference<AbstractSpan<?>> ref = new AtomicReference<>();
         scheduler.schedule(() -> ref.set(tracer.getActive()), 0, TimeUnit.SECONDS).get();
         assertThat(ref.get()).isEqualTo(transaction);
+        assertThat(tracer.getActive()).isEqualTo(transaction);
+    }
+
+    @Test
+    void testScheduleCallable_delayAndEndTransaction() throws Exception {
+        final ScheduledFuture<? extends AbstractSpan<?>> scheduledFuture = scheduler.schedule(() -> tracer.getActive(), 50, TimeUnit.MILLISECONDS);
+        verifyEndedTransactionIsStillReferenced(scheduledFuture);
+        assertThat(scheduledFuture.get()).isEqualTo(transaction);
+    }
+
+    @Test
+    void testScheduleRunnable_delayAndEndTransaction() throws Exception {
+        AtomicReference<AbstractSpan<?>> ref = new AtomicReference<>();
+        ScheduledFuture<?> scheduledTaskFuture = scheduler.schedule(() -> ref.set(tracer.getActive()), 50, TimeUnit.MILLISECONDS);
+        verifyEndedTransactionIsStillReferenced(scheduledTaskFuture);
+        assertThat(ref.get()).isEqualTo(transaction);
+    }
+
+    private void verifyEndedTransactionIsStillReferenced(ScheduledFuture<?> scheduledTaskFuture) throws InterruptedException, java.util.concurrent.ExecutionException {
+        transaction.deactivate().end();
+        // decrementing references to mock what the real reporter would do
+        transaction.decrementReferences();
+        // make sure the transaction is still referenced and not recycled yet
+        assertThat(transaction.isReferenced()).isTrue();
+        assertThat(transaction.getTraceContext().getId().isEmpty()).isFalse();
+
+        scheduledTaskFuture.get();
+
+        // make sure the transaction is recycled after the task has terminated
+        assertThat(transaction.isReferenced()).isFalse();
+        assertThat(transaction.getTraceContext().getId().isEmpty()).isTrue();
     }
 }
