@@ -53,6 +53,7 @@ exclude known static files in all applications might be changed to `/app/static/
 ** `DynamicTransformer.Accessor.get().ensureInstrumented` is now `DynamicTransformer.ensureInstrumented` - {pull}#2164[#2164]
 * Switching last instrumentations (`trace_methods`, sparkjava, JDK `HttpServer` and Struts 2) to
 `TracerAwareInstrumentation` - {pull}#2170[#2170]
+* Replace concurrency plugin maps to `SpanConcurrentHashMap` ones - {pull}#2173[#2173]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
